static/css/style.css
@font-face {
	  font-family: 'HelveticaNeueLTPro';
    src: url("../fonts/helvetica-neue-regular.ttf");
}

body, html 
{
  font-family: "Mona-Sans Regular";
  font-weight: 400;
  margin: 0; 
  padding: 0; 
  outline: 0;
  overflow-x: hidden;
  overflow-y: auto;
  scrollbar-width: thin;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
  height:100%;    
  
}
.father  {
	position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 50%;
      
}
.child  {
    margin-top: 100px;
    margin-left: 160px;
    
}
input[type="text"]
{
    width: 100%;
    font-family: "Mona-Sans Regular";
    font-size: 18px;
    height: 25px;

    
}

textarea
{
    width: 100%;
    font-family: "Mona-Sans Regular";
    font-size: 18px;
    font-family: inherit;
    
}

input[type="submit"], button[type="submit"]
{   
    height: 50px;
    width: 100%;
    margin-top: 50px;
    
}
button[type="submit"], input[type="submit"]
{ 
  font-family: "Mona-Sans Regular";
  display: inline-block;  
  height: 100px;
  width: 100%;
  margin-top: 20px;
  font-size: 48px;
  text-transform: lowercase;
  line-height: 100px;
  text-align: center;
  letter-spacing: 3px;
  background-color: black;
  color: #ffc515;  
}

button[type="submit"], input[type="submit"]:hover
{   
  background-color: black;
  color: white;  
  
}

a:link, a:visited{
    text-decoration:none;
    color: black;    
}

a:hover{
    color:#ffc515;   
     
}

.container{   
    /*padding-top: 50px;*/
    position: relative;
    left: 22.4%;
    /*top: 50%;*/
    width:50%;
    
    /*-webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    height:100%;*/
}
.createcontainer{    
  /*padding-top: 50px;*/
  position: relative;
  left: 25%;
  /*top: 50%;*/
  width:50%;
  
  /*-webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  height:100%;*/
}
form{
  font-size: 32px;
  /*letter-spacing: 1.5px;*/
  text-transform: lowercase;
  
}

.article{
    font-size: 15px;
    font-weight: 400;
    box-sizing: content-box;
    width: 100%;    
    text-align: justify;
    text-transform: capitalize;
    padding: 50px; 
    border: 10px solid  #000000;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39); 
    -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39); 
    -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
    /*border: 5px solid #ffc515;*/
    
}
.artbody{
    font-weight: 400;
    font-size: 24px;
    text-transform: lowercase;    
    }


.artbody_new{
  font-weight: 300;
  text-transform: lowercase;
  font-size: 15px;
  
   /*background-color:black;*/
  /*top: 50%;*/
  
  /*border: 5px solid #ffc515;*/

}

  
.article1{

    text-shadow: none;
    text-transform: lowercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
    color: black;   
    text-align: right;
}

.article2{
  text-align: right;
  font-size: 18px;
  
  
}

.myDiv {

    letter-spacing: 3px;
    font-family: "Mona-Sans Medium";
    font-size: 60px;
    color: white;
    text-transform: lowercase;
    /*background-color:black;*/
    margin-left: 1px;
    text-align: center;
    /*top: 50%;*/
    height: 50px;
    

    
     
}

.myDiv1 {
    font-weight: 500;
    letter-spacing: 3px;
    font-size: 24px;
    color: black;
    text-transform: uppercase;
    /*background-color:black;*/
    margin-left: 1px;
    text-align: center;
    /*top: 50%;*/
    height: 50px;
}
/* Top navigation */
/* Add a black background color to the top navigation */

.modmenu {
  letter-spacing: 3px;
  font-size: 15px;
  text-transform: lowercase;
  color: #ffc515;
  float: right;
}
.topnav {
    font-family: "Mona-Sans Regular";
    font-weight: bold;
    font-size: 28px;  
    text-transform: none;
    background-color: #ffc515;
    overflow: hidden;
    
    
  }
  
  /* Style the links inside the navigation bar */
  .topnav a {
    font-family: "Mona-Sans Regular";
    font-weight: bold;
    font-size: 28px;  
    float: right;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    
       
  }
  
  /* Change the color of links on hover */
  .topnav a:hover {
    font-family: "Mona-Sans Regular";
    font-weight: bold;
    font-weight: 400;
    font-size: 28px;  
    background-color: black;
    color: white;
  }
  
  /* Add a color to the active/current link */
  .topnav a.active {
    font-family: "Mona-Sans Regular";
    font-weight: bold;
    font-weight: 400;
    font-size: 28px; 
    background-color: black;
    color: white;

  }

  nav {
    display: block;
    
    
  }

  /*
 * Made by Erik Terwan
 * 24th of November 2015
 * MIT License
 *
 *
 * If you are thinking of using this in
 * production code, beware of the browser
 * prefixes.
 */


#menuToggle
{
  display: block;
  position: relative;
  top: -55px;
  left: 25px;
  /*width: 100%;*/
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle a
{
  text-decoration: none;
  color: black;

  transition: color 0.3s ease;
  
}

#menuToggle a:hover
{
  color: #ffc515;  
}


#menuToggle input
{
  display: block;
  width: 40px;
  height: 300px;
  position: absolute;
  top: -7px;
  left: -5px;  
  cursor: pointer;  
  opacity: 0; /* hide this */
  z-index: 2; /* and place it over the hamburger */
  
  -webkit-touch-callout: none;
}

/*
 * Just a quick hamburger
 */
#menuToggle span
{
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  background: black;
  border-radius: 3px;

  z-index: 1;

  transform-origin: 4px 0px;

  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}

#menuToggle span:first-child
{
  transform-origin: 0% 0%;
  
}

#menuToggle span:nth-last-child(2)
{
  transform-origin: 0% 100%;
}

/* 
 * Transform all the slices of hamburger
 * into a crossmark.
 */
#menuToggle input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  /*background: #232323;*/
  color: white;

}

/*
 * But let's hide the middle one.
 */
#menuToggle input:checked ~ span:nth-last-child(3)
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2); 
  color: #ffc515;

}

/*
 * Ohyeah and the last one should go the other direction
 */
#menuToggle input:checked ~ span:nth-last-child(2)
{
  transform: rotate(-45deg) translate(0, -1px);
}

@keyframes bounceIn {
  0% {
    transform: scale(0.1);
    opacity: 0;
  }
  60% {
    transform: scale(1.2);
    opacity: 1;
  }
  100% {
    transform: scale(1);
  }
}

/*
 * Make this absolute positioned
 * at the top left of the screen
 */
#menu
{
  position: absolute;
  text-transform:uppercase;
  width: 226px;
  height: 900px;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  opacity: 1.0;
  background:white;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  /* to stop flickering of text in safari */
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  /* The cubic-bezier() values for the bouncing balloon */
  transition: transform 2.5s cubic-bezier(.65, 1.95, .03, .32);
  /*cubic-bezier(1.000, -0.530, 0.405, 1.425);
  cubic-bezier(0.77,0.2,0.05,1.0);*/
  
}

#menu li
{
  /*change font size for home/create/contact here*/
  padding: 10px 0;
  font-size: 32px;
  text-transform: lowercase;

}

/*
 * And let's slide it in from the left
 */
#menuToggle input:checked ~ ul
{
  transform: none;
  
}

/* The hover part for the edit and delete icons*/

a.tooltipedit, a.tooltipdelete  {
  position: relative;
  font-size: 14px;
}

a.tooltipedit span, a.tooltipdelete span {
  display: none;    
}

a.tooltipedit:hover span, a.tooltipedit:focus span {
	display:block;
	position:absolute;
	top:-2.5em;
	left:-1.65em;
	padding: 0.2em 0.6em;
	/*background-color:#ffffff;*/
	color:#000;
	animation: example 2s infinite;
	/*animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);*/
	/*animation-direction: normal;*/
   }
a.tooltipdelete:hover span, a.tooltipdelete:focus span {
  display:block;
  position:absolute;
  top:-2.5em;
  left:-2.5em;
  padding: 0.2em 0.6em;
  /*background-color:#ffffff;*/
  color:#000;
  animation: example 2s infinite;
  /*animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);*/
  /*animation-direction: normal;*/
}

@keyframes example {

  from, 15% 
  {
    transform: rotate(90deg) translateX(100px);
    opacity: 0;
}
  50%, 60% 
  	{
  transform: rotate(90deg) translateX(0);
  opacity: 1;
  animation-timing-function: cubic-bezier(.13,.84,.82,1);
  }

85%, to   {
    transform: rotate(0) translateX(0);
    opacity: 1;
    animation-timing-function: cubic-bezier(.07,2.02,.67,.57);
}

/*  from, 15% {
    transform: rotate(0) translateX(0);
    opacity: 1;
    animation-timing-function: cubic-bezier(.07,2.02,.67,.57);
}
50%, 60% {
    transform: rotate(90deg) translateX(0);
    opacity: 1;
    animation-timing-function: cubic-bezier(.13,.84,.82,1);
}
85%, to {
    transform: rotate(90deg) translateX(100px);
    opacity: 0;
}*/
  /*from {top: 30px; }
  to {top: -30px; }*/
}

/*The back to top part */

.my_bttn{
  height: 45px;
  width: 45px;
  background-color: black;
  border: none;
  color: white;
  position: fixed;
  bottom: 30px;
  right: 30px;
  border-radius: 1px;
  cursor: pointer;
  outline: none;
  display: none;
}

.my_bttn:hover{
  transform: scale(1.05) 
             translateY(-5px);
}

/*The Image Zoom part*/
.pop
{
  /*border: 1px solid #000 ;
  border-radius: 15%;
  width: 200px;
  height: 200px;*/
  cursor: pointer;
  width: 50%;
  
  border: 10px solid white; 
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
  -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
}

.popup
{
  width: 75%;
  border: 15px solid white; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
  -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);

}

/* The About Part */

.centeredsuccess
{
  font-size: 30px;
  text-align: justify;
  position: relative;
  top: 40%;
  left: 50%;
  -moz-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  text-align: justify;
  padding:50px;
}
.centeredsuccesscopyright
{
  font-size: 30px;
  text-align: justify;
  position: absolute;
  top: 90%;
  left: 50%;
  -moz-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

b span
{
     color: #ffc515;
     font-size: 60px;
}

